[package]
name = "otel_spanexport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.19.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = [
    "grpc-tonic",
    "http-proto",
    "default",
    "reqwest-rustls",
    "reqwest-client",
] }
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
